# houkai

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
src/: .gitignore  Makefile.am  main-gtk.c  main.c  meson.build
src/akpk/: akpk.c  akpk.h  bink.c  bink.h  bkhd.c  bkhd.h  didx.c  didx.h  hirc.c  hirc.h  read.c  riff.c  riff.h  util.h  write.c
src/wmv/: wmv.c  wmv.h
tests/: meson.build
